# dice-server

./: CMakeLists.txt  README.md  client.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: client.cpp  client.h  connectionlog.cpp  connectionlog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
